# PyPI-Lens

./: .Dockerfile  .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/pypi_lens/: __init__.py  app.py  database.py  educative_app.py  update_index.py
src/pypi_lens/state/: packages_list.json  update_state.json
