[project]
name = "pypi-lens"
version = "0.1.0"
description = "Semantic search engine for Python packages"
authors = [
    {name = "RoyAalekh", email = "roy.aalekh@gmail.com"},
]
dependencies = [
    "taipy",
    "sentence-transformers",
    "httpx",
    "numpy",
    "duckdb",
    "altair",
    "pandas",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
    /(
        \.eggs/|
        \.git/|
        \.hg/|
        \.mypy_cache/|
        \.tox/|
        \.venv/|
        \.svn/|
        _build/|
        buck-out/|
        build/|
        dist/|
        node_modules/|
        venv/|
        __pycache__/
    )'''

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
